implemented the redirect
